# Computergraphik

cg_uebungen/: 01-Test.sln  02-Asteroids.sln  03-Terrain.sln  CMakeLists.txt  Steuerung.txt
cg_uebungen/01-Test/: SoftwareRenderer.vcxproj  SoftwareRenderer.vcxproj.filters  main.cpp  makefile
cg_uebungen/02-Asteroids/: Game.cpp  Game.h  Pipeline.cpp  Pipeline.h  SoftwareRenderer.vcxproj  SoftwareRenderer.vcxproj.filters  Vertex.h  main.cpp  makefile
cg_uebungen/03-Terrain/: HardwareRenderer.vcxproj  HardwareRenderer.vcxproj.filters  Pseudorandom.h  Terrain.cpp  Terrain.h  main.cpp
cg_uebungen/03-Terrain/shader/: terrain.frag  terrain.vert
cg_uebungen/dependencies/glad/include/glad/: glad.h
cg_uebungen/dependencies/glad/src/: glad.cpp
cg_uebungen/framework/: BufferBase.h  IndexBuffer.h  Model.cpp  Model.h  Program.h  Shader.h  Texture2D.cpp  Texture2D.h  Timer.h  Uniform.h  VertexArrayObject.h  VertexBuffer.h  Window.cpp  Window.h  error.h  glmmath.h  type_conversion.h
